[tool.poetry]
name = "sort"
version = "0.1.0"
description = ""
authors = ["aFy4a <afy4a@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pytest = "^7.4.2"

[tool.poetry.scripts]
sort = "sort.__init__:sort"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
